--- a/movie-app-ticketing/package.json
+++ b/movie-app-ticketing/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.15.19",
     "@reduxjs/toolkit": "^2.2.3",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
