--- a/movie-app-ticketing/package.json
+++ b/movie-app-ticketing/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.0"
